--- a/provider-tools/src/main/res/layout/theme_item_layout_simple.xml
+++ b/provider-tools/src/main/res/layout/theme_item_layout_simple.xml
@@ -8,9 +8,9 @@
     tools:layout_width="match_parent">
 
     <View
+        style="?appBarLayoutStyle"
         android:layout_width="match_parent"
-        android:layout_height="24dp"
-        style="?appBarLayoutStyle" />
+        android:layout_height="24dp" />
 
     <TextView
         android:layout_width="match_parent"
