--- a/theme/src/main/res/values-night/styles.xml
+++ b/theme/src/main/res/values-night/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Widget.App.PopupMenu" parent="ThemeOverlay.MaterialComponents">
-    </style>
-    <style name="Widget.App.PopupMenu.Overflow" parent="Widget.MaterialComponents.PopupMenu.Overflow">
-    </style>
+
+    <style name="Widget.App.PopupMenu" parent="ThemeOverlay.MaterialComponents"></style>
+
+    <style name="Widget.App.PopupMenu.Overflow" parent="Widget.MaterialComponents.PopupMenu.Overflow"></style>
 </resources>
